syntax = "proto3";

package monad_proto.signing;

message ProtoSignature {
  bytes sig = 1;
}


message ProtoMultiSig {
  repeated ProtoSignature sigs = 1;
}

message ProtoBlsSignatureCollection {
  bytes signers = 1;
  // BlsAggregateSignature is not a CertificateSignature
  // hence using raw bytes
  bytes sig = 2; 
}

message ProtoScaledBlsSignatureCollection {
  bytes signers = 1;
  // BlsAggregateSignature is not a CertificateSignature
  // hence using raw bytes
  bytes sig = 2; 
  bytes seed = 3;
}

message ProtoSignatureCollection {
  bytes data = 1; 
}
